<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.giot.memo.login.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/login"/>

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textView_login_weChat"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:paddingLeft="56dp"
        android:paddingRight="56dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center_vertical"
        android:background="@drawable/login_button"
        android:drawableLeft="@mipmap/wechat"
        android:drawableStart="@mipmap/wechat"
        android:drawablePadding="24dp"
        android:textSize="16sp"
        android:text="@string/we_chat_login"/>

</LinearLayout>
