<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@+id/textView_result_cancel"
            android:layout_toStartOf="@+id/textView_result_cancel"
            android:background="@drawable/search_edit_background"
            android:drawableLeft="@mipmap/search"
            android:drawablePadding="12dp"
            android:drawableStart="@mipmap/search"
            android:padding="8dp"
            android:textColor="#BCBEC4"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_result_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:text="@string/cancel"
            android:textColor="#BCBEC4"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/related_result"
            android:textColor="#BCBEC4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_result"
                android:textColor="#BCBEC4" />

            <TextView
                android:id="@+id/textView_result_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2CEA78" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textColor="#BCBEC4" />

        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="16dp" />

</LinearLayout>
