<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personal"
            android:textSize="@dimen/toolbar_text_size" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView_personal_head"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        android:src="@mipmap/default_head"
        android:contentDescription="@string/personal"/>

    <TextView
        android:id="@+id/textView_personal_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="#6BCBFD"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_personal_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="96dp"
        android:drawableLeft="@mipmap/exit"
        android:drawablePadding="16dp"
        android:drawableStart="@mipmap/exit"
        android:text="@string/logout"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/img_person_sync"
            android:layout_toLeftOf="@+id/img_person_sync"
            android:drawableLeft="@mipmap/cloud"
            android:drawablePadding="16dp"
            android:drawableStart="@mipmap/cloud"
            android:textSize="20sp"
            android:text="@string/bill_sync" />

        <ImageView
            android:id="@+id/img_person_sync"
            android:layout_width="42dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@mipmap/open"
            android:contentDescription="@string/bill_sync"/>

    </RelativeLayout>


</LinearLayout>
