<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="6dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_add_income"
                            android:layout_width="50dp"
                            android:layout_height="36dp"
                            android:background="@drawable/mode_income"
                            android:gravity="center"
                            android:text="@string/income"
                            android:textColor="#989FA9" />

                        <TextView
                            android:id="@+id/textView_add_expenditure"
                            android:layout_width="50dp"
                            android:layout_height="36dp"
                            android:background="@drawable/mode_expenditure_selected"
                            android:gravity="center"
                            android:text="@string/expenditure"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/textView_add_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="48dp"
                            android:layout_marginStart="48dp"
                            android:drawableRight="@mipmap/rmb_ic"
                            android:drawableEnd="@mipmap/rmb_ic"
                            android:drawablePadding="12dp"
                            android:text="-"
                            android:textColor="#000000"
                            android:textSize="24sp"/>

                        <EditText
                            android:id="@+id/editText_add_money"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:background="@null"
                            android:drawableBottom="@drawable/money_edit_background"
                            android:drawablePadding="4dp"
                            android:inputType="none"
                            android:singleLine="true"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <com.giot.memo.view.PageRecyclerView
                        android:id="@+id/recycler_add_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" />

                    <com.giot.memo.view.PageIndicatorView
                        android:id="@+id/indicator_add_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <AutoCompleteTextView
                        android:id="@+id/auto_add_remark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/remark_edit_background"
                        android:hint="@string/remark"
                        android:completionThreshold="1"
                        android:maxLength="10"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="#989FA9"
                        android:textSize="12sp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardView_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:keyBackground="@android:color/transparent"
        android:keyTextColor="@color/default_text_color"
        android:keyTextSize="24sp" />

</FrameLayout>
